fix layout overflow

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   padding: 4rem 22px;
+  overflow: hidden;
 }
 
 .container > article {
